--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
         <div class="recipe-2">
-          <a href="detail.html">
+          <a href="recipe-test.html">
             <div class="cell-content">
               <img src="res/carbonara.jpg" alt="recipe-2" />
 
