--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
     </nav>
     <div class="containerCategories">
       <div class="mainCourses">
-        <a href="#">
+        <a href="dinners.html">
           <img src="res/maincourses.jpg" alt="MainCoursesImg" />
         </a>
         <h1 class="textlabel">Main Courses</h1>
       </div>
       <div class="sides">
-        <a href="#">
+        <a href="sides.html">
           <img src="res/sides.jpg" alt="sidesImg" />
         </a>
         <h1 class="textlabel">Sides</h1>
       </div>
 
       <div class="desserts">
-        <a href="#">
+        <a href="desserts.html">
           <img id="dessertsimg" src="res/desserts.jpg" alt="dessertsImg" />
         </a>
         <h1 class="textlabel">Desserts</h1>
