--- a/recipe-test.html
+++ b/recipe-test.html
@@ -9,6 +9,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="styleNavFooter.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleGridCells.css" />
     <link rel="stylesheet" href="style-recipe.css" />
     <title>Chef's Choice</title>
   </head>
