--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a href="#">
             <div class="cell-content">
               <img src="res/Beef-Steak-Final.jpg" alt="recipe-1" />
-              <p class="recipe-info">Beef Tenderloin Steak</p>
+              <p class="recipe-info">Tenderloin Steak</p>
             </div>
           </a>
         </div>
